﻿Change Log
==========

1.0.8
-----

Changed
- Bug Fixes
 - Some SPARQL parsers did not handle bad URIs gracefully i.e. did not provide informative errors (CORE-432)
 - SPARQL CSV parser reject variable names in header row if CSV quoted values are used (CORE-433)
 - Accessing remote SPARQL endpoints could fail to include default & named graph parameters if POSTing the queries (CORE-434)

1.0.7
-----

Changed
- Bug Fixes
 - Missing ToString() on UUID() and StrUUID() functions (CORE-427)
 - Fix bug with parsing BIND inside complex nested graph patterns (CORE-428)
 - Fix bug with RDF/XML output under MonoTouch (CORE-431)
- Build
 - Ensure AssemblyVersion is synchronised properly with NuGet package versions (CORE-426)
 - Remove MSBuild integrated NuGet package restore
- Dependencies
 - Upgrade VDS.Common to 1.4.0
 - Upgrade Json.Net to 6.0.6
 - Upgrade HtmlAgilityPack to 1.4.9

1.0.6
-----

Changed
- Bug Fixes
 - Fix bug in overly strict SPARQL Results JSON parsing (CORE-419)
 - Fix bug with incorrect sub-query evaluation (CORE-420)
 - Fix bug where NQuadsWriter may omit graph names when the data was inserted via SPARQL Updates (CORE-421)
 - Fix bug parsing SPARQL Results JSON where data is in unexpected order (CORE-423)
 - Fix possible NPE when running updates with a custom query processor
 - Fix for Stardog 2.2 reasoning support

1.0.5
-----

Changed
- Bug Fixes
 - Fix a bug with Left Join producing incorrect results due to join linearization optimizations in some cases (CORE-406)
 - Fix a bug in substituting parameter values containing $ signs into SparqlParameterizedString instances (CORE-408)
 - Fix a corner case in evaluating CONSTRUCT queries with empty WHERE clause and concrete triples in template (CORE-407)
 - Fix overly strict SPARQL Results XML parsing (CORE-410)
 - Fix incorrect usage of Single.NaN and Double.NaN constants with equality operator (CORE-412)
 - Include location information in Illegal space in URIs error from NTriples tokeniser