@@ -9,6 +9,7 @@ Changed
  - Some SPARQL parsers did not handle bad URIs gracefully i.e. did not provide informative errors (CORE-432)
  - SPARQL CSV parser reject variable names in header row if CSV quoted values are used (CORE-433)
  - Accessing remote SPARQL endpoints could fail to include default & named graph parameters if POSTing the queries (CORE-434)
+ - Lazy query evaluation can cause an apparent infinite loop (i.e. extremely slow query evaluation) in some cases (CORE-439)
 
 1.0.7
 -----
